Fri Jul 23 08:25:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm.mpb:
          Removed the -aw as IDL compiler option. We've
          changed the IDL instead.

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl:
          Replace an anonymous bounded octet sequence with a typedef.

Fri Jul 23 07:29:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tests/InterInArgs/Base/InterInArgsT.idl:
        * connectors/ami4ccm/tests/InterInOutArgs/Base/InterInOutT.idl:
        * connectors/ami4ccm/tests/InterOutArgs/Base/InterOutArgsT.idl:
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.idl:
        * connectors/dds4ccm/idl/dds_rtf2_dcps_i_handle.idl:
          Replace an anonymous bounded octet sequence with a typedef.

Fri Jul 23 06:48:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/DDS_Sender.mpc:
          Added MPC file for Base.idl.

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.h:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.cxx:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.idl:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/BasePlugin.cxx:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/BasePlugin.h:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/BaseSupport.h:
        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/BaseSupport.cxx:

          Removed these files.

Thu Jul 22 16:00:37 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/SHS_DataModel.idl:

          Fuzz.

Thu Jul 22 15:30:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
